# silentcut

./: .gitignore  README.md  ROADMAP.md  debug.py  main.py  pyproject.toml
docs/: README.md
docs/implementation/: phase-1-1-acceleration.md  phase-1-2-fluid-acceleration.md  phase-1-3-unique-paths.md  phase-1-silentcut.md
docs/planning/: silentcut-prd.md
silentcut/: __init__.py  cutter.py  detector.py  main.py  models.py  processor.py  utils.py
tests/: conftest.py
tests/e2e/: test_cli.py
tests/integration/: test_cutter.py
tests/unit/: test_detector.py  test_errors.py  test_models.py  test_processor.py
